[tool:pytest]
# Look for tests only in tests directories.
python_files = "dowut/tests/*"
# Display summary info for (s)skipped, (X)xpassed, (x)xfailed, (f)failed and (e)errored tests
# On Jenkins pytest for some reason runs tests from ./build/ directory - ignore them.
addopts = "-rsxXfE --ignore=./build/"
testpaths = "dowut"

[metadata]
license_file = LICENSE
